# user-service-fastapi

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py  models.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  profiles.py  roles.py  users.py
app/api/v1/schemas/: __init__.py  profile.py  token.py  user.py
app/core/: config.py  observability.py  secrets.py  security.py
app/crud/: __init__.py  profile.py  role.py  user.py
app/db/: session.py
app/models/: __init__.py  profile.py  role.py  user.py
tests/: conftest.py  test_role_flow.py  test_user_flow.py
